deployment/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth-deployment
  name: oauth-deployment
spec:
  replicas: {replicas}
  selector:
    matchLabels:
      app: oauth-deployment
  template:
    metadata:
      labels:
        app: oauth-deployment
    spec:
      containers:
        - image: {container_image}
          name: doxa-oauth2
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          ports:
            - containerPort: 80
          imagePullPolicy: Always
