deployment/oauth.ingress-development.yml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oauth-ingress
  annotations:
    app.kubernetes.io/name: ingress-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: auth-dev.doxa-holdings.com
    http:
      paths:
        - backend:
            serviceName: oauth-service
            servicePort: 80
  tls:
  - hosts:
    - auth-dev.doxa-holdings.com
    secretName: c-bgzzr
