deployment/oauth.ingress-uat.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doxa-auth-ingress
  annotations:
    app.kubernetes.io/name: ingress-nginx
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: auth-uat.doxa-holdings.com
    http:
      paths:
        - backend:
            service:
              name: oauth-service
              port:
                number: 80
          pathType: ImplementationSpecific      
  tls:
  - hosts:
    - auth-uat.doxa-holdings.com
    secretName: doxa-holdings.com
